fix: fixed color picker overflow

--- a/frontend/src/app/features/flows/components/label-color-picker/label-color-picker.component.scss
+++ b/frontend/src/app/features/flows/components/label-color-picker/label-color-picker.component.scss
@@ -41,9 +41,7 @@
 }
 
 .color-options-panel {
-    position: absolute;
-    top: calc(100% + 4px);
-    left: 50%;
+    position: fixed;
     transform: translateX(-50%);
     z-index: 300;
     display: flex;
@@ -56,11 +54,6 @@
     box-shadow:
         0px 6px 10px rgba(0, 0, 0, 0.2),
         0px 2px 3px rgba(0, 0, 0, 0.3);
-}
-
-.color-options-panel.open-upward {
-    top: auto;
-    bottom: calc(100% + 4px);
 }
 
 .color-option-btn {
